--- a/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
+++ b/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
@@ -3,61 +3,62 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:ApplicationDataManager.Settings.Xaml"
                     xmlns:settings="using:ApplicationDataManager.Settings">
-    <local:EmptyConverter x:Name="Conv" />
-    <DataTemplate x:Name="String"
-                  x:DataType="settings:SettingInfo">
-        <TextBox Text="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}"
-                 MinHeight="50">
-            <TextBox.Header>
-                <TextBlock Text="{x:Bind FriendlyName}"
-                           TextWrapping="WrapWholeWords" />
-            </TextBox.Header>
-        </TextBox>
-    </DataTemplate>
-    <DataTemplate x:Name="Number"
-                  x:DataType="settings:SettingInfo">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock Text="{x:Bind FriendlyName}"
-                       FontWeight="{ThemeResource SliderHeaderThemeFontWeight}"
-                       TextWrapping="WrapWholeWords" />
-            <local:SettingSlider Grid.Row="1"
-                                 SettingValue="{x:Bind}"
-                                 IsFocusEngagementEnabled="False" />
-        </Grid>
-    </DataTemplate>
-    <DataTemplate x:Name="Enum"
-                  x:DataType="settings:SettingInfo">
-        <local:SettingComboBox SettingValue="{x:Bind}"
-                               HorizontalAlignment="Stretch">
-            <local:SettingComboBox.Header>
-                <TextBlock Text="{x:Bind FriendlyName}"
-                           TextWrapping="WrapWholeWords" />
-            </local:SettingComboBox.Header>
-        </local:SettingComboBox>
-    </DataTemplate>
-    <DataTemplate x:Name="BooleanToggleSwitch"
-                  x:DataType="settings:SettingInfo">
-        <ToggleSwitch HorizontalAlignment="Stretch"
-                      IsOn="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}"
-                      OnContent="{x:Bind ((settings:ToggleSwitchRepresentAttribute)ValueRepresent).TrueString}"
-                      OffContent="{x:Bind ((settings:ToggleSwitchRepresentAttribute)ValueRepresent).FalseString}">
-            <ToggleSwitch.Header>
-                <TextBlock Text="{x:Bind FriendlyName}"
-                           TextWrapping="WrapWholeWords" />
-            </ToggleSwitch.Header>
-        </ToggleSwitch>
-    </DataTemplate>
-    <DataTemplate x:Name="BooleanCheckBox"
-                  x:DataType="settings:SettingInfo">
-        <CheckBox HorizontalAlignment="Stretch"
-                  IsChecked="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}">
+  <local:EmptyConverter x:Name="Conv" />
+  <DataTemplate x:Name="String"
+                x:DataType="settings:SettingInfo">
+    <TextBox Text="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}"
+             AcceptsReturn="{x:Bind ((settings:TextTemplateAttribute)ValueRepresent).MultiLine, FallbackValue=false}"
+             MinHeight="50">
+      <TextBox.Header>
+        <TextBlock Text="{x:Bind FriendlyName}"
+                   TextWrapping="WrapWholeWords" />
+      </TextBox.Header>
+    </TextBox>
+  </DataTemplate>
+  <DataTemplate x:Name="Number"
+                x:DataType="settings:SettingInfo">
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <TextBlock Text="{x:Bind FriendlyName}"
+                 FontWeight="{ThemeResource SliderHeaderThemeFontWeight}"
+                 TextWrapping="WrapWholeWords" />
+      <local:SettingSlider Grid.Row="1"
+                           SettingValue="{x:Bind}"
+                           IsFocusEngagementEnabled="False" />
+    </Grid>
+  </DataTemplate>
+  <DataTemplate x:Name="Enum"
+                x:DataType="settings:SettingInfo">
+    <local:SettingComboBox SettingValue="{x:Bind}"
+                           HorizontalAlignment="Stretch">
+      <local:SettingComboBox.Header>
+        <TextBlock Text="{x:Bind FriendlyName}"
+                   TextWrapping="WrapWholeWords" />
+      </local:SettingComboBox.Header>
+    </local:SettingComboBox>
+  </DataTemplate>
+  <DataTemplate x:Name="BooleanToggleSwitch"
+                x:DataType="settings:SettingInfo">
+    <ToggleSwitch HorizontalAlignment="Stretch"
+                  IsOn="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}"
+                  OnContent="{x:Bind ((settings:ToggleSwitchRepresentAttribute)ValueRepresent).TrueString}"
+                  OffContent="{x:Bind ((settings:ToggleSwitchRepresentAttribute)ValueRepresent).FalseString}">
+      <ToggleSwitch.Header>
+        <TextBlock Text="{x:Bind FriendlyName}"
+                   TextWrapping="WrapWholeWords" />
+      </ToggleSwitch.Header>
+    </ToggleSwitch>
+  </DataTemplate>
+  <DataTemplate x:Name="BooleanCheckBox"
+                x:DataType="settings:SettingInfo">
+    <CheckBox HorizontalAlignment="Stretch"
+              IsChecked="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}">
 
-            <TextBlock Text="{x:Bind FriendlyName}"
-                       TextWrapping="WrapWholeWords" />
-        </CheckBox>
-    </DataTemplate>
+      <TextBlock Text="{x:Bind FriendlyName}"
+                 TextWrapping="WrapWholeWords" />
+    </CheckBox>
+  </DataTemplate>
 </ResourceDictionary>
