--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -31,8 +31,7 @@
         <Grid HorizontalAlignment="Center"
               VerticalAlignment="Center"
               x:Name="gd_ContentRoot">
-            <Image x:Name="img_Thumb"
-                   Source="{x:Bind Image.Thumb, Mode=OneWay, FallbackValue={ThemeResource LoadingImageSource}}" />
+            <Image x:Name="img_Thumb" />
             <Image x:Name="img_Content"
                    Source="{x:Bind Image.ImageFile, Mode=OneWay, Converter={StaticResource FileConverter}}"
                    Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
