--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -85,8 +85,7 @@
                  Style="{StaticResource DetailTextBlockStyle}" />
       <local:Rating x:Name="Rating"
                     RelativePanel.AlignBottomWithPanel="True"
-                    PlaceholderValue="{x:Bind Gallery.Rating.AverageScore, Mode=OneWay}"
-                    Margin="0,-4,0,0" />
+                    PlaceholderValue="{x:Bind Gallery.Rating.AverageScore, Mode=OneWay}"/>
       <TextBlock x:Name="tbCount"
                  RelativePanel.AlignVerticalCenterWith="CategoryTag"
                  RelativePanel.RightOf="CategoryTag"
