--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -37,7 +37,7 @@
                      Padding="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                      Margin="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x-1,x0'}"
                      VerticalAlignment="Top"
-                     Foreground="{x:Bind local:ImagePage.loadStateToPbForeground(Image.State), Mode=OneWay}"
+                     Foreground="{x:Bind local:ImagePage.loadStateToPbForeground(Image.State), Mode=OneWay, FallbackValue=Yellow}"
                      IsIndeterminate="{x:Bind local:ImagePage.loadStateToPbIsIndeterminate(Image.State), Mode=OneWay, FallbackValue=True}"
                      Visibility="{x:Bind local:ImagePage.loadStateToPbVisibility(Image.State), Mode=OneWay, FallbackValue=Visible}"
                      Value="{x:Bind Image.Progress, Mode=OneWay}">
