show user rating; about control
Former-commit-id: 1282fa8b3c6d8dbd7285d8ad924af02e42f9467b [formerly a7dad820231e697131a72a915b4b5ab36297b88d]
Former-commit-id: 7d17d6ffa0e86f8dcd702401c898bfe4f0fde5ff

--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -74,9 +74,8 @@
                     Stretch="Fill" />
       </FlipView.Background>
       <FlipView.ItemTemplate>
-        <DataTemplate xmlns:storage="using:Windows.Storage"
-                      x:DataType="storage:StorageFile">
-          <Image Source="{x:Bind Converter={StaticResource FileConverter}}" />
+        <DataTemplate x:DataType="BitmapImage">
+          <Image Source="{x:Bind}" />
         </DataTemplate>
       </FlipView.ItemTemplate>
     </FlipView>
