--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -427,6 +427,15 @@
             </Flyout>
           </AppBarButton.Flyout>
         </AppBarButton>
+        <AppBarButton x:Name="abbQRCode"
+                      x:Uid="Views/ImagePage/QRCodeAppBarButton"
+                      Label="Scan QR Code"
+                      Command="{x:Bind VM.OpenQRCode, Mode=OneWay}"
+                      CommandParameter="{x:Bind VM.QRCodeResult, Mode=OneWay, FallbackValue={x:Null}}">
+          <AppBarButton.Icon>
+            <PathIcon Data="M1.25,1.25h5v1.25h-3.75v3.75h-1.25zM1.25,18.75h5v-1.25h-3.75v-3.75h-1.25zM18.75,1.25h-5v1.25h3.75v3.75h1.25zM18.75,18.75h-5v-1.25h3.75v-3.75h1.25zM0,9.375h20v1.25h-20z" />
+          </AppBarButton.Icon>
+        </AppBarButton>
       </CommandBar.SecondaryCommands>
     </CommandBar>
   </RelativePanel>
